# ncaa_mens_basketball

./: .gitignore  README.md  README.txt  demo_scraping.ipynb  diff_5game_ave_1415.csv  example1.csv  logreg_model_params.txt  main.py  ncaa_basketball_analysis.ipynb  ncaa_basketball_db.ipynb  ncaa_basketball_db.py  ncaa_basketball_display_data.ipynb  ncaa_basketball_games.ipynb  ncaa_basketball_gamestats.ipynb  ncaa_basketball_model_base.ipynb  ncaa_basketball_munging.ipynb  ncaa_basketball_scoreboard.ipynb  ncaa_basketball_scoreboard.py  ncaa_basketball_teamdiff.ipynb  ncaa_basketball_teams.ipynb  pyproject.toml  requirements.txt  saved_model.p  temp.txt
.elasticbeanstalk/: config.yml
.ipynb_checkpoints/: demo_scraping-checkpoint.ipynb  ncaa_basketball_db-checkpoint.ipynb  ncaa_basketball_display_data-checkpoint.ipynb  ncaa_basketball_games-checkpoint.ipynb  ncaa_basketball_gamestats-checkpoint.ipynb  ncaa_basketball_model_base-checkpoint.ipynb  ncaa_basketball_munging-checkpoint.ipynb  ncaa_basketball_scoreboard-checkpoint.ipynb  ncaa_basketball_teamdiff-checkpoint.ipynb  ncaa_basketball_teams-checkpoint.ipynb
boxscore_csv/: example1.csv  example1_old.csv  example2.csv  example2_old.csv
ncaa_basketball_webapp/: .gitignore  application.py  logs.txt  requirements.txt  run.py
ncaa_basketball_webapp/.ebextensions/: ncaa-basketball-webapp3.config
ncaa_basketball_webapp/flask_ncaa_mbb/: ModelBase.py  __init__.py  saved_model.p  views.py
ncaa_basketball_webapp/flask_ncaa_mbb/templates/: home.html  index.html  (+4 more)
src/friday/: main.py
src/friday.egg-info/: PKG-INFO
(+5 files in other folders)
