[tool.poetry]
name = "friday"
version = "0.1.0"
description = "friday; the college basketball predictor"
authors = ["Andrew DeGroot <andrew_degroot@goodyear.com>"]


[tool.poetry.dependencies]
python = "^3.7"
six = "==1.12.*"
pandas = "==0.25.*"


[tool.poetry.dev-dependencies]
pytest = "^3.0"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
